--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="stylesheet" href="styles/reset.css" />
-    <title>Crito Blinders</title>
+    <title>Cripto Blinders</title>
   </head>
   <body>
     <main class="mainFlex">
